Corrects the overflow of the tips box

--- a/client/app/styles/buildingSelector.scss
+++ b/client/app/styles/buildingSelector.scss
@@ -97,5 +97,7 @@ li.active a, li.active a:hover {
   height: 130px;
   width: 25%;
   margin-bottom: 30px;
+  overflow: scroll;
   //margin-leftt: 100px;
+
 }
